--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <%= render 'layouts/header' %>
     <main class="container mx-auto mt-28 px-5 flex">
       <p class="text-cyan-400"><%= notice %></p>
       <p class="text-red-400"><%= alert %></p>
