--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="m-5">
   <h1 class="font-bold text-4xl">Pages#index</h1>
-  <p>Find me in app/views/pages/index.html.erb</p>
+  <p><%= button_to "ログアウト", destroy_user_session_path, method: :delete if user_signed_in? %>
 </div>
