feat: 投稿機能実装。

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <div>
-  <h1 class="font-bold text-4xl"><%= @user.name %></h1>
+  <div class="font-bold text-4xl m-2"><%= @user.name %></div>
+  <div class="font-bold text-4xl m-2"><%= @user.email %></div>
 </div>
