--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,9 @@
     <div class="m-2">
       <%= button_to "ログアウト", destroy_user_session_path, method: :delete %>
     </div>
+    <div class="m-2">
+      <%= link_to "投稿", new_post_path %>
+    </div>
   <% else %>
     <div class="m-2">
       <%= link_to "ログインページ", new_user_session_path %>
@@ -16,5 +19,8 @@
   <% end %>
   <div class="m-2">
     <%= link_to "ユーザー一覧", users_path %>
+  </div>
+  <div class="m-2">
+    <%= link_to "投稿一覧", posts_path %>
   </div>
 </div>
