--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,9 @@
 <div id="<%= dom_id post %>">
   <p class="my-5">
+    <strong class="block font-medium mb-1">name:</strong>
+    <%= post.user.name %>
+  </p>
+  <p class="my-5">
     <strong class="block font-medium mb-1">Content:</strong>
     <%= post.content %>
   </p>
