--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col m-auto">
+<div class="flex flex-col m-5 border rounded-md w-40">
   <div class="m-2">
     <%= link_to user.name, user_path(user) %>
   </div>
