--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-black flex h-14 text-white w-full">
+<div class="bg-black flex h-14 text-white p-2 w-full">
   <% if user_signed_in? %>
     <div class="m-2">
       <%= link_to "マイページ", user_path(current_user) %>
