--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,7 @@
 <div>
-  <h1 class="font-bold text-4xl">Comments#new</h1>
-  <p>Find me in app/views/comments/new.html.erb</p>
+  <h1 class="font-bold text-4xl"><%= @post.content %>への新規コメント</h1>
+  <%= form_with model: [@post, @comment] do |f| %>
+    <%= f.text_field :text, class: "w-1/2 my-5" %>
+    <%= f.submit "登録", class: "bg-pink-300 text-white my-5 p-2 rounded-md"%>
+  <% end %>
 </div>
