--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,6 +7,9 @@
     <strong class="block font-medium mb-1">Content:</strong>
     <%= post.content %>
   </p>
+  <p class="my-5">
+    コメント<%= post.comments.count %>件
+  </p>
 
   <% if action_name != "show" %>
     <%= link_to "Show this post", post, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
