--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <div class="flex flex-col m-5">
   <div class="w-full m-auto">
-    <%= render @notifications.where(checked: false) %>
+    <% if @user == current_user %>
+      <%= render @notifications.where(checked: false) %>
+    <% end %>
   </div>
   <div class="w-full flex">
     <div class="m-5 w-1/6 border border-black">
