--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,1 +1,4 @@
-<p class="m-5"><%= notification.visitor.name %>さんが<%= link_to notification.post.content, post_path(notification.post)  %>にコメントをしました。</p>
+<p class="m-5">
+  <%= link_to notification.visitor.name, user_path(notification.visitor) %>さんが
+  <%= link_to notification.post.content, post_path(notification.post)  %>にコメントをしました。
+</p>
